# django-frontly

./: CHANGES.txt  LICENSE.txt  MANIFEST.in  README.md  readme.md  setup.cfg
frontly/: models.py  urls.py
frontly/static/trix/: trix.css
frontly/templates/frontly/: editor_input.html
frontly/templatetags/: frontly.py
src/frontly/: __init__.py  views.py
src/frontly/migrations/: 0001_initial.py
src/frontly/static/trix/: trix_2.0.0.umd.js
src/frontly/templates/frontly/: editor_img.html  editor_textarea.html  editor_timepicker.html
