[metadata]
name = django-frontly
version = 1.0.3
author = Ed Menendez
author_email = ed@menendez.com
description = The easiest way to build views for Django.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/edmenendez/django-frontly
project_urls =
    Bug Tracker = https://github.com/edmenendez/django-frontly/issues
    repository = https://github.com/edmenendez/django-frontly
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.2

[options.packages.find]
where = src